objects/MMPJ_Ext_Vign_Questionnaire_Prev_Recolte__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - Used for Cognac</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_Annee__c</fullName>
        <label>Année</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BB_Ca__c</fullName>
        <label>BB Ca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BB_hL_AP__c</fullName>
        <label>BB hL AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BB_ha__c</fullName>
        <label>BB ha</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BIES_Ca__c</fullName>
        <label>BIES Ca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BIES_hL_AP__c</fullName>
        <label>BIES hL AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BIES_ha__c</fullName>
        <label>BIES ha</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BO_ca__c</fullName>
        <label>BO Ca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BO_ha__c</fullName>
        <label>BO ha</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Bo_hL_AP__c</fullName>
        <label>Bo hL AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Contrat__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contrat</label>
        <referenceTo>MMPJ_Ext_Vign_Contrat__c</referenceTo>
        <relationshipLabel>Questionnaires Prev Récoltes</relationshipLabel>
        <relationshipName>Questionnaires_Prev_Recoltes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_FB_Ca__c</fullName>
        <label>FB Ca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_FB_hL_AP__c</fullName>
        <label>FB hL AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_FB_ha__c</fullName>
        <label>FB ha</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_GC_Ca__c</fullName>
        <label>GC Ca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_GC_hL_AP__c</fullName>
        <label>GC hL AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_GC_ha__c</fullName>
        <label>GC ha</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Livreur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Livreur</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MMPJ_Ext_Vign_Societe__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Viticulteur, Vigneron</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Questionnaire Prev Récoltes</relationshipLabel>
        <relationshipName>Questionnaire_Prev_R_coltes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Observations__c</fullName>
        <label>Observations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_PC_Ca__c</fullName>
        <label>PC Ca</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_PC_hL_AP__c</fullName>
        <label>PC hL AP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_PC_ha__c</fullName>
        <label>PC ha</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Statut__c</fullName>
        <label>Statut</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sauvegardé</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Surfaces_totales_Cognac__c</fullName>
        <label>Surfaces totales affectées au Cognac</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Surface</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Type_de_Contrat__c</fullName>
        <label>Type de Contrat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BFBC</fullName>
                </value>
                <value>
                    <fullName>CV00</fullName>
                </value>
                <value>
                    <fullName>UVPC</fullName>
                </value>
                <value>
                    <fullName>VIN / BF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Volume_actuel_du_contrat__c</fullName>
        <label>Volume actuel du contrat</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Questionnaire Prev Récolte</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MMPJ_Ext_Vign_Statut__c</columns>
        <columns>MMPJ_Ext_Vign_Livreur__c</columns>
        <columns>MMPJ_Ext_Vign_Type_de_Contrat__c</columns>
        <columns>MMPJ_Ext_Vign_Contrat__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Prev-{000000}</displayFormat>
        <label>Numéro Questionnaire</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires Prev Récoltes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>